--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="colorPrimary">#3F51B5</color>
-  <color name="colorPrimaryDark">#303F9F</color>
-  <color name="colorAccent">#FF4081</color>
+  <color name="colorPrimary">#FAAA14</color>
+  <color name="colorPrimaryDark">#FAAA14</color>
+  <color name="colorAccent">#FAAA14</color>
 
   <color name="tab_unselect">#c9c9c9</color>
   <color name="bg_btn">#dadada</color>
