--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -5,24 +5,24 @@
       android:layout_height="match_parent"
       android:orientation="vertical"
       >
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="0dp"
-        >
 
-      <android.support.v7.widget.Toolbar
-          android:id="@+id/toolbar"
+      <android.support.v4.view.ViewPager
+          android:id="@+id/home_content"
           android:layout_width="match_parent"
-          android:layout_height="?attr/actionBarSize"
-          app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-          app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+          android:layout_height="0dp"
+          android:layout_weight="1"
           />
-    </android.support.design.widget.AppBarLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="我来测试"
-        />
-  </LinearLayout>
+      <View
+          android:layout_width="match_parent"
+          android:layout_height="2px"
+          android:layout_marginBottom="5dp"
+          android:background="@color/bg_gray"
+          />
+      <android.support.design.widget.TabLayout
+          android:id="@+id/tab"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          style="@style/MainTabLayout"
+          />
+    </LinearLayout>
 </layout>
