--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -24,11 +24,10 @@
           app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
           />
     </android.support.design.widget.AppBarLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="51dp"
-        android:text="222222222222222222222222222222"
-        android:id="@+id/textView"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         />
-  </LinearLayout>
+ </LinearLayout>
 </layout>  
