--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -2,16 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
   <data>
-    <!-- 定义变量 -->
-    <variable
-        name="presenter"
-        type="me.itxuye.gankdbinding.ui.fragment.FirstTabFragment.Presenter"
-        />
+
   </data>
-  <LinearLayout
+  <android.support.design.widget.CoordinatorLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:orientation="vertical"
       >
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -23,15 +18,20 @@
           android:id="@+id/toolbar"
           android:layout_width="match_parent"
           android:layout_height="?attr/actionBarSize"
+          app:layout_scrollFlags="scroll|enterAlways|snap"
           app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
           app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
           />
+      <android.support.design.widget.TabLayout
+          android:id="@+id/tab_layout"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          />
     </android.support.design.widget.AppBarLayout>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="@{presenter.onClick}"
-        android:text="@string/点我"
-        />
-  </LinearLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+  </android.support.design.widget.CoordinatorLayout>
 </layout>  
